Included Angular Material

--- a/blog-post/src/app/hello-world/hello-world.component.html
+++ b/blog-post/src/app/hello-world/hello-world.component.html
@@ -1,3 +1,9 @@
 <p>
   hello-world works!
 </p>
+{{name}}
+Enter your age: <input type="text" [(ngModel)]="age">
+Hey you are {{age}}
+<app-date></app-date>
+<app-address-card [user]="user"></app-address-card>
+<app-view-component></app-view-component>
